@@ -196,7 +196,7 @@ epc_shell_leave
 
 <SUBSECTION>
 EPC_DEBUG_LEVEL
-epc_shell_debug_level
+epc_shell_get_debug_level
 
 <SUBSECTION>
 EpcShellProgressHooks
@@ -210,6 +210,7 @@ EPC_AVAHI_ERROR
 epc_shell_watch_avahi_client_state
 epc_shell_create_avahi_entry_group
 epc_shell_create_service_browser
+epc_shell_expand_name
 epc_shell_get_host_name
 epc_shell_watch_remove
 
